using UnityEngine;
using System.Collections;

/// <summary>
/// –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —Å–º–µ—Ä—Ç—å –∏ —Ä–µ—Å–ø–∞–≤–Ω –ª–æ–∫–∞–ª—å–Ω–æ–≥–æ –∏–≥—Ä–æ–∫–∞
/// –ë–ª–æ–∫–∏—Ä—É–µ—Ç –¥–≤–∏–∂–µ–Ω–∏–µ –∏ –∞—Ç–∞–∫–∏, –ø–æ–∫–∞–∑—ã–≤–∞–µ—Ç –∞–Ω–∏–º–∞—Ü–∏—é —Å–º–µ—Ä—Ç–∏
/// </summary>
public class PlayerDeathHandler : MonoBehaviour
{
    [Header("Dependencies")]
    private HealthSystem healthSystem;
    private PlayerController playerController;
    private PlayerAttackNew playerAttack;
    private SkillExecutor skillExecutor;
    private Animator animator;
    private CharacterController characterController;
    private Rigidbody rb;
    private TargetableEntity targetableEntity;

    [Header("Death State")]
    private bool isDead = false;
    private float deathTime = 0f;
    private float respawnDelay = 10f; // 10 —Å–µ–∫—É–Ω–¥ –¥–æ —Ä–µ—Å–ø–∞–≤–Ω–∞

    [Header("Network")]
    [SerializeField] private bool isLocalPlayer = false; // –¢–æ–ª—å–∫–æ –ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç —Å–æ–±—ã—Ç–∏—è –Ω–∞ —Å–µ—Ä–≤–µ—Ä

    [Header("Respawn")]
    private Coroutine respawnCoroutine;

    void Awake()
    {
        // –ò–°–ü–†–ê–í–õ–ï–ù–û: –í—Å–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –º–æ–≥—É—Ç –±—ã—Ç—å –∫–∞–∫ –Ω–∞ —Ç–µ–∫—É—â–µ–º –æ–±—ä–µ–∫—Ç–µ, —Ç–∞–∫ –∏ –Ω–∞ Model (–¥–æ—á–µ—Ä–Ω–µ–º)
        // –ò—Å–ø–æ–ª—å–∑—É–µ–º GetComponentInChildren –¥–ª—è –ø–æ–∏—Å–∫–∞ –≤–µ–∑–¥–µ
        healthSystem = GetComponentInChildren<HealthSystem>();
        playerController = GetComponentInChildren<PlayerController>();
        playerAttack = GetComponentInChildren<PlayerAttackNew>();
        skillExecutor = GetComponentInChildren<SkillExecutor>();
        animator = GetComponentInChildren<Animator>();
        characterController = GetComponentInChildren<CharacterController>();
        rb = GetComponentInChildren<Rigidbody>();
        targetableEntity = GetComponentInChildren<TargetableEntity>();
        if (targetableEntity == null)
        {
            targetableEntity = GetComponent<TargetableEntity>();
        }

        Debug.Log($"[PlayerDeathHandler] –ù–∞–π–¥–µ–Ω—ã –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã:");
        Debug.Log($"  HealthSystem: {healthSystem != null}");
        Debug.Log($"  PlayerController: {playerController != null}");
        Debug.Log($"  PlayerAttackNew: {playerAttack != null}");
        Debug.Log($"  SkillExecutor: {skillExecutor != null}");
        Debug.Log($"  CharacterController: {characterController != null}");
        Debug.Log($"  TargetableEntity: {targetableEntity != null}");
    }

    void Start()
    {
        // –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏–µ —Å–º–µ—Ä—Ç–∏
        if (healthSystem != null)
        {
            healthSystem.OnDeath += OnPlayerDied;
        }
    }

    void Update()
    {
        // –£–ë–†–ê–ù–û: –ë–ª–æ–∫–∏—Ä–æ–≤–∫–∞ –≤ Update() –Ω–µ –Ω—É–∂–Ω–∞, —Ç.–∫. –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –æ—Ç–∫–ª—é—á–∞—é—Ç—Å—è —Å—Ä–∞–∑—É –≤ OnPlayerDied()
        // –û—Å—Ç–∞–≤–ª—è–µ–º Update() –ø—É—Å—Ç—ã–º –¥–ª—è –≤–æ–∑–º–æ–∂–Ω—ã—Ö –±—É–¥—É—â–∏—Ö –ø—Ä–æ–≤–µ—Ä–æ–∫
    }

    /// <summary>
    /// –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å, —è–≤–ª—è–µ—Ç—Å—è –ª–∏ —ç—Ç–æ—Ç –∏–≥—Ä–æ–∫ –ª–æ–∫–∞–ª—å–Ω—ã–º (true) –∏–ª–∏ —Å–µ—Ç–µ–≤—ã–º (false)
    /// –¢–æ–ª—å–∫–æ –ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç —Å–æ–±—ã—Ç–∏—è —Å–º–µ—Ä—Ç–∏ –Ω–∞ —Å–µ—Ä–≤–µ—Ä
    /// </summary>
    public void SetLocalPlayer(bool isLocal)
    {
        isLocalPlayer = isLocal;
        Debug.Log($"[PlayerDeathHandler] üè∑Ô∏è isLocalPlayer —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω = {isLocal} –¥–ª—è {gameObject.name}");
    }

    /// <summary>
    /// –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ –∏–≥—Ä–æ–∫ —É–º–∏—Ä–∞–µ—Ç
    /// </summary>
    private void OnPlayerDied()
    {
        if (isDead) return; // –£–∂–µ –º–µ—Ä—Ç–≤

        isDead = true;
        deathTime = Time.time;

        Debug.Log("[PlayerDeathHandler] ‚ò†Ô∏è –ò–≥—Ä–æ–∫ –ø–æ–≥–∏–±! –û–∂–∏–¥–∞–Ω–∏–µ —Ä–µ—Å–ø–∞–≤–Ω–∞...");

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û—Ç–º–µ–Ω—è–µ–º —Ç—Ä–∞–Ω—Å—Ñ–æ—Ä–º–∞—Ü–∏—é Bear Form –µ—Å–ª–∏ –æ–Ω–∞ –∞–∫—Ç–∏–≤–Ω–∞
        SimpleTransformation transformation = GetComponent<SimpleTransformation>();
        if (transformation != null && transformation.IsTransformed())
        {
            transformation.RevertToOriginal();
            Debug.Log("[PlayerDeathHandler] üêª –¢—Ä–∞–Ω—Å—Ñ–æ—Ä–º–∞—Ü–∏—è Bear Form –æ—Ç–º–µ–Ω–µ–Ω–∞ –ø—Ä–∏ —Å–º–µ—Ä—Ç–∏");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –£–Ω–∏—á—Ç–æ–∂–∞–µ–º –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –º–∏–Ω—å–æ–Ω–∞ (—Å–∫–µ–ª–µ—Ç) –µ—Å–ª–∏ –æ–Ω –µ—Å—Ç—å
        SkillExecutor skillExecutorComp = GetComponent<SkillExecutor>();
        if (skillExecutorComp != null)
        {
            skillExecutorComp.CleanupActiveMinion();
            Debug.Log("[PlayerDeathHandler] üíÄ –ê–∫—Ç–∏–≤–Ω—ã–π –º–∏–Ω—å–æ–Ω —É–Ω–∏—á—Ç–æ–∂–µ–Ω –ø—Ä–∏ —Å–º–µ—Ä—Ç–∏ –≤–ª–∞–¥–µ–ª—å—Ü–∞");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û—Ç–∫–ª—é—á–∞–µ–º –¥–≤–∏–∂–µ–Ω–∏–µ –°–†–ê–ó–£ (–Ω–µ –¥–∞–µ–º –∏–≥—Ä–æ–∫—É —É–ø—Ä–∞–≤–ª—è—Ç—å –ø–µ—Ä—Å–æ–Ω–∞–∂–µ–º)
        // –ò–°–ü–†–ê–í–õ–ï–ù–ò–ï: –ö–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –º–æ–≥—É—Ç –±—ã—Ç—å —É–∂–µ –æ—Ç–∫–ª—é—á–µ–Ω—ã –¥–ª—è NetworkPlayer, –ø—Ä–æ–≤–µ—Ä—è–µ–º isLocalPlayer
        if (playerController != null)
        {
            playerController.enabled = false;
            Debug.Log($"[PlayerDeathHandler] üö´ PlayerController –æ—Ç–∫–ª—é—á—ë–Ω (isLocalPlayer={isLocalPlayer})");
        }
        if (playerAttack != null)
        {
            playerAttack.enabled = false;
            Debug.Log($"[PlayerDeathHandler] üö´ PlayerAttack –æ—Ç–∫–ª—é—á—ë–Ω (isLocalPlayer={isLocalPlayer})");
        }
        if (skillExecutor != null)
        {
            skillExecutor.enabled = false;
            Debug.Log($"[PlayerDeathHandler] üö´ SkillExecutor –æ—Ç–∫–ª—é—á—ë–Ω (isLocalPlayer={isLocalPlayer})");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û—Ç–∫–ª—é—á–∞–µ–º CharacterController –ù–ï–ú–ï–î–õ–ï–ù–ù–û —á—Ç–æ–±—ã –ø–µ—Ä—Å–æ–Ω–∞–∂ –Ω–µ –º–æ–≥ –¥–≤–∏–≥–∞—Ç—å—Å—è
        if (characterController != null)
        {
            characterController.enabled = false;
            Debug.Log("[PlayerDeathHandler] üéÆ CharacterController –æ—Ç–∫–ª—é—á–µ–Ω –°–†–ê–ó–£ (–ø—Ä–µ–¥–æ—Ç–≤—Ä–∞—â–µ–Ω–∏–µ –¥–≤–∏–∂–µ–Ω–∏—è)");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û–ø—É—Å–∫–∞–µ–º –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –Ω–∞ –∑–µ–º–ª—é –¥–ª—è –∞–Ω–∏–º–∞—Ü–∏–∏ —Å–º–µ—Ä—Ç–∏
        // –ò–°–ü–†–ê–í–õ–ï–ù–û: –û–ø—É—Å–∫–∞–µ–º –í–°–ï–• (–∏ –ª–æ–∫–∞–ª—å–Ω—ã—Ö –∏ NetworkPlayer)!
        // NetworkPlayer —Ç–æ–∂–µ –Ω—É–∂–Ω–æ –æ–ø—É—Å—Ç–∏—Ç—å, —á—Ç–æ–±—ã –∞–Ω–∏–º–∞—Ü–∏—è —Å–º–µ—Ä—Ç–∏ –±—ã–ª–∞ –Ω–∞ –∑–µ–º–ª–µ
        DropToGround();

        // –ò–°–ü–†–ê–í–õ–ï–ù–û: –ù–ï –∏—Å–ø–æ–ª—å–∑—É–µ–º Rigidbody –¥–ª—è –ø–∞–¥–µ–Ω–∏—è
        // –ü—Ä–æ—Å—Ç–æ –æ—Å—Ç–∞–≤–ª—è–µ–º –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –≤ —Ç–µ–∫—É—â–µ–π –ø–æ–∑–∏—Ü–∏–∏ –±–µ–∑ —Ñ–∏–∑–∏–∫–∏
        // –≠—Ç–æ –ø—Ä–µ–¥–æ—Ç–≤—Ä–∞—â–∞–µ—Ç –ø—Ä–æ–±–ª–µ–º—ã —Å –ø–æ–∑–∏—Ü–∏–µ–π –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞
        if (rb != null)
        {
            rb.isKinematic = true;
            rb.useGravity = false;
            Debug.Log("[PlayerDeathHandler] üéÆ Rigidbody –æ—Å—Ç–∞–µ—Ç—Å—è kinematic (–±–µ–∑ —Ñ–∏–∑–∏–∫–∏ –ø–∞–¥–µ–Ω–∏—è)");
        }

        // –ü—Ä–æ–∏–≥—Ä—ã–≤–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é —Å–º–µ—Ä—Ç–∏
        PlayDeathAnimation();

        // –í –º—É–ª—å—Ç–∏–ø–ª–µ–µ—Ä–µ —Å–µ—Ä–≤–µ—Ä —É–ø—Ä–∞–≤–ª—è–µ—Ç —Ä–µ—Å–ø–∞–≤–Ω–æ–º
        // –í singleplayer –∑–∞–ø—É—Å–∫–∞–µ–º –ª–æ–∫–∞–ª—å–Ω—ã–π —Ä–µ—Å–ø–∞–≤–Ω
        if (SocketIOManager.Instance == null || !SocketIOManager.Instance.IsConnected)
        {
            // Single player - —Ä–µ—Å–ø–∞–≤–Ω –ª–æ–∫–∞–ª—å–Ω–æ
            if (respawnCoroutine != null) StopCoroutine(respawnCoroutine);
            respawnCoroutine = StartCoroutine(RespawnAfterDelay(respawnDelay));
        }
        else
        {
            // Multiplayer - –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º —Å–º–µ—Ä—Ç—å –Ω–∞ —Å–µ—Ä–≤–µ—Ä
            SendDeathToServer();

            // –ó–∞–ø—É—Å–∫–∞–µ–º –ª–æ–∫–∞–ª—å–Ω—ã–π —Ä–µ—Å–ø–∞–≤–Ω (—Å–µ—Ä–≤–µ—Ä –ø–æ–¥—Ç–≤–µ—Ä–¥–∏—Ç)
            if (respawnCoroutine != null) StopCoroutine(respawnCoroutine);
            respawnCoroutine = StartCoroutine(RespawnAfterDelay(respawnDelay));

            Debug.Log("[PlayerDeathHandler] üåê –°–º–µ—Ä—Ç—å –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä, –∑–∞–ø—É—â–µ–Ω —Ç–∞–π–º–µ—Ä —Ä–µ—Å–ø–∞–≤–Ω–∞ 10 —Å–µ–∫...");
        }
    }

    /// <summary>
    /// –û—Ç–ø—Ä–∞–≤–∏—Ç—å —Å–æ–±—ã—Ç–∏–µ —Å–º–µ—Ä—Ç–∏ –Ω–∞ —Å–µ—Ä–≤–µ—Ä
    /// </summary>
    private void SendDeathToServer()
    {
        // –ö–†–ò–¢–ò–ß–ù–û: NetworkPlayer –ù–ï –¥–æ–ª–∂–µ–Ω –æ—Ç–ø—Ä–∞–≤–ª—è—Ç—å —Å–æ–±—ã—Ç–∏—è —Å–º–µ—Ä—Ç–∏ (—Ç–æ–ª—å–∫–æ –ø–æ–ª—É—á–∞—Ç—å)
        if (!isLocalPlayer)
        {
            Debug.Log($"[PlayerDeathHandler] ‚è≠Ô∏è –ü—Ä–æ–ø—É—â–µ–Ω–∞ –æ—Ç–ø—Ä–∞–≤–∫–∞ player_died (—ç—Ç–æ NetworkPlayer, –Ω–µ –ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫)");
            return;
        }

        if (SocketIOManager.Instance == null || !SocketIOManager.Instance.IsConnected)
        {
            Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è SocketIOManager –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω!");
            return;
        }

        // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –ø—É—Å—Ç–æ–π –æ–±—ä–µ–∫—Ç - —Å–µ—Ä–≤–µ—Ä –∏—Å–ø–æ–ª—å–∑—É–µ—Ç socket.id –∏–∑ WebSocket –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è
        // –ú–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é (—É–±–∏–π—Ü–∞, –ø—Ä–∏—á–∏–Ω–∞ —Å–º–µ—Ä—Ç–∏ –∏ —Ç.–¥.)
        string deathData = "{}";
        SocketIOManager.Instance.Emit("player_died", deathData);

        Debug.Log($"[PlayerDeathHandler] üì§ –û—Ç–ø—Ä–∞–≤–ª–µ–Ω–æ player_died –Ω–∞ —Å–µ—Ä–≤–µ—Ä");
    }

    /// <summary>
    /// –ü—Ä–æ–∏–≥—Ä–∞—Ç—å –∞–Ω–∏–º–∞—Ü–∏—é —Å–º–µ—Ä—Ç–∏
    /// </summary>
    private void PlayDeathAnimation()
    {
        if (animator == null)
        {
            Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è Animator –Ω–µ –Ω–∞–π–¥–µ–Ω!");
            return;
        }

        // –ü—Ä–æ–≤–µ—Ä—è–µ–º –µ—Å—Ç—å –ª–∏ –ø–∞—Ä–∞–º–µ—Ç—Ä isDead
        if (HasAnimatorParameter(animator, "isDead"))
        {
            animator.SetBool("isDead", true);
            Debug.Log("[PlayerDeathHandler] üé¨ –ê–Ω–∏–º–∞—Ü–∏—è —Å–º–µ—Ä—Ç–∏ –∑–∞–ø—É—â–µ–Ω–∞ (isDead=true)");
        }
        else if (HasAnimatorParameter(animator, "Death"))
        {
            animator.SetTrigger("Death");
            Debug.Log("[PlayerDeathHandler] üé¨ –ê–Ω–∏–º–∞—Ü–∏—è —Å–º–µ—Ä—Ç–∏ –∑–∞–ø—É—â–µ–Ω–∞ (Death trigger)");
        }
        else
        {
            Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è –ü–∞—Ä–∞–º–µ—Ç—Ä—ã isDead/Death –Ω–µ –Ω–∞–π–¥–µ–Ω—ã –≤ Animator!");
        }

        // –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –¥–≤–∏–∂–µ–Ω–∏–µ
        animator.SetBool("IsMoving", false);
        animator.SetFloat("MoveX", 0);
        animator.SetFloat("MoveY", 0);
    }

    /// <summary>
    /// –ö–æ—Ä—É—Ç–∏–Ω–∞ –¥–ª—è —Ä–µ—Å–ø–∞–≤–Ω–∞ —Å –∑–∞–¥–µ—Ä–∂–∫–æ–π
    /// </summary>
    private IEnumerator RespawnAfterDelay(float delay)
    {
        Debug.Log($"[PlayerDeathHandler] ‚è≥ –†–µ—Å–ø–∞–≤–Ω —á–µ—Ä–µ–∑ {delay} —Å–µ–∫—É–Ω–¥...");
        yield return new WaitForSeconds(delay);

        // –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–µ–∂–∏–º –∏–≥—Ä—ã
        bool isMultiplayer = SocketIOManager.Instance != null && SocketIOManager.Instance.IsConnected;

        if (isMultiplayer)
        {
            // MULTIPLAYER: –ó–∞–ø—Ä–∞—à–∏–≤–∞–µ–º —Ä–µ—Å–ø–∞–≤–Ω —É —Å–µ—Ä–≤–µ—Ä–∞
            RequestRespawnFromServer();
        }
        else
        {
            // SINGLEPLAYER: –†–µ—Å–ø–∞–≤–Ω–∏–º –ª–æ–∫–∞–ª—å–Ω–æ —á–µ—Ä–µ–∑ ArenaManager
            if (ArenaManager.Instance != null)
            {
                ArenaManager.Instance.RespawnPlayer();
            }
            else if (BattleSceneManager.Instance != null)
            {
                Vector3 respawnPosition;
                Quaternion respawnRotation;
                if (BattleSceneManager.Instance.TryGetRandomSpawnPoint(out respawnPosition, out respawnRotation))
                {
                    Respawn(respawnPosition);
                    transform.rotation = respawnRotation;
                }
                else
                {
                    Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å spawn point –∏–∑ BattleSceneManager, –∏—Å–ø–æ–ª—å–∑—É–µ–º —Ç–µ–∫—É—â—É—é –ø–æ–∑–∏—Ü–∏—é");
                    Respawn(transform.position);
                }
            }
            else
            {
                // Fallback - –ø—Ä–æ—Å—Ç–æ –≤–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º HP –Ω–∞ —Ç–µ–∫—É—â–µ–π –ø–æ–∑–∏—Ü–∏–∏
                Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è ArenaManager –Ω–µ –Ω–∞–π–¥–µ–Ω! –ò—Å–ø–æ–ª—å–∑—É–µ–º fallback —Ä–µ—Å–ø–∞–≤–Ω –Ω–∞ —Ç–µ–∫—É—â–µ–π –ø–æ–∑–∏—Ü–∏–∏");
                Respawn(transform.position);
            }
        }
    }

    /// <summary>
    /// –ó–∞–ø—Ä–æ—Å–∏—Ç—å —Ä–µ—Å–ø–∞–≤–Ω —É —Å–µ—Ä–≤–µ—Ä–∞ (multiplayer)
    /// </summary>
    private void RequestRespawnFromServer()
    {
        if (SocketIOManager.Instance == null || !SocketIOManager.Instance.IsConnected)
        {
            Debug.LogError("[PlayerDeathHandler] ‚ùå SocketIOManager –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω!");
            return;
        }

        // –ü–æ–ª—É—á–∞–µ–º –Ω–∞—à socketId
        string mySocketId = "";
        if (NetworkSyncManager.Instance != null)
        {
            mySocketId = NetworkSyncManager.Instance.LocalPlayerSocketId;
        }

        if (string.IsNullOrEmpty(mySocketId))
        {
            Debug.LogError("[PlayerDeathHandler] ‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å LocalPlayerSocketId!");
            return;
        }

        // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å –Ω–∞ —Ä–µ—Å–ø–∞–≤–Ω
        string requestData = $"{{\\\"socketId\\\":\\\"{mySocketId}\\\"}}";
        SocketIOManager.Instance.Emit("request_respawn", requestData);

        Debug.Log($"[PlayerDeathHandler] üì§ –ó–∞–ø—Ä–æ—Å –Ω–∞ —Ä–µ—Å–ø–∞–≤–Ω –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω: {requestData}");
    }

    /// <summary>
    /// –í–æ—Å–∫—Ä–µ—Å–∏—Ç—å –∏–≥—Ä–æ–∫–∞ (–≤—ã–∑—ã–≤–∞–µ—Ç—Å—è –∏–∑ NetworkSyncManager –∏–ª–∏ ArenaManager)
    /// </summary>
    public void Respawn(Vector3 position)
    {
        Debug.Log($"[PlayerDeathHandler] ‚öïÔ∏è –†–µ—Å–ø–∞–≤–Ω –∏–≥—Ä–æ–∫–∞ –Ω–∞ –ø–æ–∑–∏—Ü–∏–∏ {position}");

        // –û—Ç–º–µ–Ω—è–µ–º –∫–æ—Ä—É—Ç–∏–Ω—É —Ä–µ—Å–ø–∞–≤–Ω–∞ –µ—Å–ª–∏ –æ–Ω–∞ —Ä–∞–±–æ—Ç–∞–µ—Ç
        if (respawnCoroutine != null)
        {
            StopCoroutine(respawnCoroutine);
            respawnCoroutine = null;
        }

        // –°–±—Ä–∞—Å—ã–≤–∞–µ–º —Å–æ—Å—Ç–æ—è–Ω–∏–µ —Å–º–µ—Ä—Ç–∏
        isDead = false;

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –ü–æ—Ä—è–¥–æ–∫ –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∏—è HP!
        // 1. –°–Ω–∞—á–∞–ª–∞ –≤–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º HealthSystem (–∏—Å—Ç–æ—á–Ω–∏–∫ –∏—Å—Ç–∏–Ω—ã –¥–ª—è HP)
        if (healthSystem != null)
        {
            healthSystem.Revive(1f); // 100% HP
            Debug.Log($"[PlayerDeathHandler] üíö HealthSystem –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω: {healthSystem.CurrentHealth}/{healthSystem.MaxHealth}");
        }

        // 2. –ó–∞—Ç–µ–º —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ–º TargetableEntity —Å HealthSystem
        TargetableEntity targetable = targetableEntity;
        if (targetable == null)
        {
            targetable = GetComponentInChildren<TargetableEntity>();
            if (targetable != null)
            {
                targetableEntity = targetable;
            }
        }

        if (targetable != null && healthSystem != null)
        {
            // –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ–º HP –∏–∑ HealthSystem
            targetable.Revive(1f);

            // –î–û–ü–û–õ–ù–ò–¢–ï–õ–¨–ù–ê–Ø –ü–†–û–í–ï–†–ö–ê: —É–±–µ–∂–¥–∞–µ–º—Å—è —á—Ç–æ HP —Å–æ–≤–ø–∞–¥–∞—é—Ç
            float healthSystemHP = healthSystem.CurrentHealth;
            float targetableHP = targetable.GetCurrentHealth();

            if (Mathf.Abs(healthSystemHP - targetableHP) > 0.1f)
            {
                Debug.LogError($"[PlayerDeathHandler] ‚ùå –†–ê–°–°–ò–ù–•–†–û–ù–ò–ó–ê–¶–ò–Ø HP! HealthSystem={healthSystemHP}, TargetableEntity={targetableHP}");
                // –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –≤—ã—Ä–∞–≤–Ω–∏–≤–∞–µ–º
                targetable.SetHealth(healthSystemHP, healthSystem.MaxHealth);
            }

            Debug.Log($"[PlayerDeathHandler] ‚úÖ TargetableEntity –≤–æ—Å—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω: isAlive={targetable.IsAlive()}, HP={targetableHP}/{healthSystem.MaxHealth}");
        }

        // –¢–µ–ª–µ–ø–æ—Ä—Ç–∏—Ä—É–µ–º –Ω–∞ —Ç–æ—á–∫—É —Ä–µ—Å–ø–∞–≤–Ω–∞
        // –ò–°–ü–†–ê–í–õ–ï–ù–û: –ò—Å–ø–æ–ª—å–∑—É–µ–º –ø–æ–∑–∏—Ü–∏—é –Ω–∞–ø—Ä—è–º—É—é –±–µ–∑ –¥–æ–±–∞–≤–ª–µ–Ω–∏—è –≤—ã—Å–æ—Ç—ã
        // CharacterController –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –ø–æ—Å—Ç–∞–≤–∏—Ç –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –Ω–∞ –∑–µ–º–ª—é
        CharacterController cc = GetComponent<CharacterController>();
        if (cc != null)
        {
            cc.enabled = false;
            transform.position = position;
            cc.enabled = true;
            Debug.Log($"[PlayerDeathHandler] üìç –¢–µ–ª–µ–ø–æ—Ä—Ç CharacterController –Ω–∞ {position}");
        }
        else
        {
            transform.position = position;
            Debug.Log($"[PlayerDeathHandler] üìç –¢–µ–ª–µ–ø–æ—Ä—Ç –±–µ–∑ CharacterController –Ω–∞ {position}");
        }

        // –í–∫–ª—é—á–∞–µ–º CharacterController –æ–±—Ä–∞—Ç–Ω–æ
        if (characterController != null)
        {
            characterController.enabled = true;
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û—Ç–∫–ª—é—á–∞–µ–º Rigidbody –æ–±—Ä–∞—Ç–Ω–æ (CharacterController —Ç–µ–ø–µ—Ä—å –∫–æ–Ω—Ç—Ä–æ–ª–∏—Ä—É–µ—Ç –¥–≤–∏–∂–µ–Ω–∏–µ)
        if (rb != null)
        {
            rb.isKinematic = true;
            rb.useGravity = false;
            rb.linearVelocity = Vector3.zero;
            rb.angularVelocity = Vector3.zero;
            Debug.Log("[PlayerDeathHandler] üéÆ Rigidbody –æ—Ç–∫–ª—é—á–µ–Ω (CharacterController —Ç–µ–ø–µ—Ä—å –∞–∫—Ç–∏–≤–µ–Ω)");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –í–∫–ª—é—á–∞–µ–º —É–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –æ–±—Ä–∞—Ç–Ω–æ –¢–û–õ–¨–ö–û –¥–ª—è –ª–æ–∫–∞–ª—å–Ω–æ–≥–æ –∏–≥—Ä–æ–∫–∞!
        // NetworkPlayer –ù–ï –¥–æ–ª–∂–µ–Ω –≤–∫–ª—é—á–∞—Ç—å PlayerController/PlayerAttack (–æ–Ω–∏ —É–ø—Ä–∞–≤–ª—è—é—Ç—Å—è —Å–µ—Ä–≤–µ—Ä–æ–º)
        if (isLocalPlayer)
        {
            // –õ–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫ - –≤–∫–ª—é—á–∞–µ–º –≤—Å–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è
            if (playerController != null) playerController.enabled = true;
            if (playerAttack != null) playerAttack.enabled = true;
            if (skillExecutor != null) skillExecutor.enabled = true;
            Debug.Log("[PlayerDeathHandler] ‚úÖ –ö–æ–º–ø–æ–Ω–µ–Ω—Ç—ã —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –í–ö–õ–Æ–ß–ï–ù–´ (–ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫)");
        }
        else
        {
            // NetworkPlayer - –ù–ï –≤–∫–ª—é—á–∞–µ–º –ª–æ–∫–∞–ª—å–Ω—ã–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã (–æ–Ω–∏ –¥–æ–ª–∂–Ω—ã –æ—Å—Ç–∞–≤–∞—Ç—å—Å—è –æ—Ç–∫–ª—é—á–µ–Ω–Ω—ã–º–∏)
            Debug.Log("[PlayerDeathHandler] ‚è≠Ô∏è –ö–æ–º–ø–æ–Ω–µ–Ω—Ç—ã —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –ù–ï –≤–∫–ª—é—á–µ–Ω—ã (NetworkPlayer - —É–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è —Å–µ—Ä–≤–µ—Ä–æ–º)");
        }

        // –°–±—Ä–∞—Å—ã–≤–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é —Å–º–µ—Ä—Ç–∏
        if (animator != null)
        {
            // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Å–µ —Å–æ—Å—Ç–æ—è–Ω–∏—è Animator
            if (HasAnimatorParameter(animator, "isDead"))
            {
                animator.SetBool("isDead", false);
                Debug.Log("[PlayerDeathHandler] üé¨ Animator: isDead = false");
            }

            // –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Å–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–≤–∏–∂–µ–Ω–∏—è
            if (HasAnimatorParameter(animator, "IsMoving"))
                animator.SetBool("IsMoving", false);

            if (HasAnimatorParameter(animator, "MoveX"))
                animator.SetFloat("MoveX", 0);

            if (HasAnimatorParameter(animator, "MoveY"))
                animator.SetFloat("MoveY", 0);

            if (HasAnimatorParameter(animator, "Speed"))
                animator.SetFloat("Speed", 0);

            // –°–±—Ä–∞—Å—ã–≤–∞–µ–º –≤—Å–µ —Ç—Ä–∏–≥–≥–µ—Ä—ã (Attack, Death –∏ —Ç.–¥.)
            if (HasAnimatorParameter(animator, "Attack"))
                animator.ResetTrigger("Attack");

            if (HasAnimatorParameter(animator, "Death"))
                animator.ResetTrigger("Death");

            // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–æ–¥–∏–º Idle
            animator.Play("Idle", 0, 0f);

            Debug.Log("[PlayerDeathHandler] üé¨ Animator –ø–æ–ª–Ω–æ—Å—Ç—å—é —Å–±—Ä–æ—à–µ–Ω –≤ Idle");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –ü—Ä–∏–Ω—É–¥–∏—Ç–µ–ª—å–Ω–æ –æ—Ç–ø—Ä–∞–≤–ª—è–µ–º –∞–Ω–∏–º–∞—Ü–∏—é Idle –¥—Ä—É–≥–∏–º –∏–≥—Ä–æ–∫–∞–º!
        // –ë–µ–∑ —ç—Ç–æ–≥–æ –¥—Ä—É–≥–∏–µ –∏–≥—Ä–æ–∫–∏ –ø—Ä–æ–¥–æ–ª–∂–∞—Ç –≤–∏–¥–µ—Ç—å –∞–Ω–∏–º–∞—Ü–∏—é Dead
        // –í–ê–ñ–ù–û: –¢–æ–ª—å–∫–æ –ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫ –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –∞–Ω–∏–º–∞—Ü–∏—é –Ω–∞ —Å–µ—Ä–≤–µ—Ä
        if (isLocalPlayer && SocketIOManager.Instance != null && SocketIOManager.Instance.IsConnected)
        {
            SocketIOManager.Instance.UpdateAnimation("Idle", 1.0f);
            Debug.Log("[PlayerDeathHandler] üì° –û—Ç–ø—Ä–∞–≤–ª–µ–Ω–∞ –∞–Ω–∏–º–∞—Ü–∏—è Idle –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞");
        }

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –æ–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–µ HP –Ω–∞ —Å–µ—Ä–≤–µ—Ä –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞!
        // –≠—Ç–æ –≥–∞—Ä–∞–Ω—Ç–∏—Ä—É–µ—Ç —á—Ç–æ —Å–µ—Ä–≤–µ—Ä –∑–Ω–∞–µ—Ç –ø—Ä–∞–≤–∏–ª—å–Ω—ã–π maxHealth
        SendStatsToServer();

        Debug.Log("[PlayerDeathHandler] ‚úÖ –ò–≥—Ä–æ–∫ –≤–æ—Å–∫—Ä–µ—à–µ–Ω!");
    }

    /// <summary>
    /// –û—Ç–ø—Ä–∞–≤–∏—Ç—å HP –∏ stats –Ω–∞ —Å–µ—Ä–≤–µ—Ä –¥–ª—è —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∞—Ü–∏–∏
    /// –í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞ —á—Ç–æ–±—ã —Å–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä–æ–≤–∞—Ç—å HP —Å —Å–µ—Ä–≤–µ—Ä–æ–º
    /// </summary>
    private void SendStatsToServer()
    {
        // –ö–†–ò–¢–ò–ß–ù–û: NetworkPlayer –ù–ï –¥–æ–ª–∂–µ–Ω –æ—Ç–ø—Ä–∞–≤–ª—è—Ç—å stats –Ω–∞ —Å–µ—Ä–≤–µ—Ä
        if (!isLocalPlayer)
        {
            Debug.Log("[PlayerDeathHandler] ‚è≠Ô∏è –ü—Ä–æ–ø—É—â–µ–Ω–∞ –æ—Ç–ø—Ä–∞–≤–∫–∞ stats (—ç—Ç–æ NetworkPlayer, –Ω–µ –ª–æ–∫–∞–ª—å–Ω—ã–π –∏–≥—Ä–æ–∫)");
            return;
        }

        if (healthSystem == null)
        {
            Debug.LogError("[PlayerDeathHandler] ‚ùå HealthSystem == null, –Ω–µ –º–æ–≥—É –æ—Ç–ø—Ä–∞–≤–∏—Ç—å stats!");
            return;
        }

        CharacterStats characterStats = GetComponent<CharacterStats>();
        if (characterStats == null)
        {
            Debug.LogError("[PlayerDeathHandler] ‚ùå CharacterStats –Ω–µ –Ω–∞–π–¥–µ–Ω!");
            return;
        }

        // –°–æ–±–∏—Ä–∞–µ–º –¥–∞–Ω–Ω—ã–µ
        float maxHealth = healthSystem.MaxHealth;
        float currentHealth = healthSystem.CurrentHealth;

        // –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: –ò—Å–ø–æ–ª—å–∑—É–µ–º serializable –∫–ª–∞—Å—Å—ã –≤–º–µ—Å—Ç–æ anonymous types!
        // JsonUtility.ToJson() –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç "{}" –¥–ª—è anonymous types
        PlayerStatsData stats = new PlayerStatsData
        {
            strength = characterStats.strength,
            perception = characterStats.perception,
            endurance = characterStats.endurance,
            wisdom = characterStats.wisdom,
            intelligence = characterStats.intelligence,
            agility = characterStats.agility,
            luck = characterStats.luck
        };

        // –§–æ—Ä–º–∏—Ä—É–µ–º JSON
        UpdatePlayerStatsData data = new UpdatePlayerStatsData
        {
            maxHealth = maxHealth,
            currentHealth = currentHealth,
            stats = stats
        };

        string json = JsonUtility.ToJson(data);

        Debug.Log($"[PlayerDeathHandler] üìä –û—Ç–ø—Ä–∞–≤–∫–∞ stats –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞:");
        Debug.Log($"  MaxHealth: {maxHealth}");
        Debug.Log($"  CurrentHealth: {currentHealth}");
        Debug.Log($"  Endurance: {characterStats.endurance}");

        // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –Ω–∞ —Å–µ—Ä–≤–µ—Ä —á–µ—Ä–µ–∑ SocketIOManager
        if (SocketIOManager.Instance != null && SocketIOManager.Instance.IsConnected)
        {
            SocketIOManager.Instance.Emit("update_player_stats", json);
            Debug.Log("[PlayerDeathHandler] ‚úÖ Stats –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω—ã –Ω–∞ —Å–µ—Ä–≤–µ—Ä –ø–æ—Å–ª–µ —Ä–µ—Å–ø–∞–≤–Ω–∞!");
        }
        else
        {
            Debug.LogWarning("[PlayerDeathHandler] ‚ö†Ô∏è SocketIOManager –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω, stats –Ω–µ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω—ã");
        }
    }

    /// <summary>
    /// –ü—Ä–æ–≤–µ—Ä–∏—Ç—å –µ—Å—Ç—å –ª–∏ –ø–∞—Ä–∞–º–µ—Ç—Ä –≤ Animator
    /// </summary>
    private bool HasAnimatorParameter(Animator anim, string paramName)
    {
        foreach (AnimatorControllerParameter param in anim.parameters)
        {
            if (param.name == paramName) return true;
        }
        return false;
    }

    /// <summary>
    /// –ü—É–±–ª–∏—á–Ω—ã–µ –≥–µ—Ç—Ç–µ—Ä—ã
    /// </summary>
    public bool IsDead => isDead;
    public float TimeSinceDeath => isDead ? Time.time - deathTime : 0f;
    public float RespawnTimeLeft => isDead ? Mathf.Max(0f, respawnDelay - TimeSinceDeath) : 0f;

    void OnDestroy()
    {
        if (healthSystem != null)
        {
            healthSystem.OnDeath -= OnPlayerDied;
        }

        if (respawnCoroutine != null)
        {
            StopCoroutine(respawnCoroutine);
        }
    }

    /// <summary>
    /// Serializable –∫–ª–∞—Å—Å –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ stats –Ω–∞ —Å–µ—Ä–≤–µ—Ä
    /// –ö–†–ò–¢–ò–ß–ï–°–ö–ò –í–ê–ñ–ù–û: JsonUtility.ToJson() –ù–ï —Ä–∞–±–æ—Ç–∞–µ—Ç —Å anonymous types!
    /// </summary>
    [System.Serializable]
    private class PlayerStatsData
    {
        public int strength;
        public int perception;
        public int endurance;
        public int wisdom;
        public int intelligence;
        public int agility;
        public int luck;
    }

    /// <summary>
    /// Serializable –∫–ª–∞—Å—Å –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ HP –∏ stats –Ω–∞ —Å–µ—Ä–≤–µ—Ä
    /// </summary>
    [System.Serializable]
    private class UpdatePlayerStatsData
    {
        public float maxHealth;
        public float currentHealth;
        public PlayerStatsData stats;
    }

    /// <summary>
    /// –û–ø—É—Å—Ç–∏—Ç—å –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –Ω–∞ –∑–µ–º–ª—é (–¥–ª—è –∞–Ω–∏–º–∞—Ü–∏–∏ —Å–º–µ—Ä—Ç–∏ –Ω–∞ —Ö–æ–ª–º–∞—Ö)
    /// –ò—Å–ø–æ–ª—å–∑—É–µ—Ç raycast –≤–Ω–∏–∑ –¥–ª—è –ø–æ–∏—Å–∫–∞ –∑–µ–º–ª–∏
    /// </summary>
    private void DropToGround()
    {
        // Raycast –≤–Ω–∏–∑ –æ—Ç —Ü–µ–Ω—Ç—Ä–∞ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞
        Vector3 rayStart = transform.position + Vector3.up * 0.5f; // –ù–∞—á–∏–Ω–∞–µ–º —Å —Ü–µ–Ω—Ç—Ä–∞ –ø–µ—Ä—Å–æ–Ω–∞–∂–∞
        RaycastHit hit;

        // –ö–∞—Å—Ç—É–µ–º –ª—É—á –≤–Ω–∏–∑ –Ω–∞ —Ä–∞—Å—Å—Ç–æ—è–Ω–∏–µ 10 –º–µ—Ç—Ä–æ–≤ (–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ –¥–ª—è –±–æ–ª—å—à–∏–Ω—Å—Ç–≤–∞ —Ö–æ–ª–º–æ–≤)
        if (Physics.Raycast(rayStart, Vector3.down, out hit, 10f, LayerMask.GetMask("Default", "Terrain", "Ground")))
        {
            // –ó–µ–º–ª—è –Ω–∞–π–¥–µ–Ω–∞! –û–ø—É—Å–∫–∞–µ–º –ø–µ—Ä—Å–æ–Ω–∞–∂–∞ –Ω–∞ –∑–µ–º–ª—é
            Vector3 groundPosition = hit.point;

            // –ù–µ–±–æ–ª—å—à–æ–π offset —á—Ç–æ–±—ã –ø–µ—Ä—Å–æ–Ω–∞–∂ –±—ã–ª —Ç–æ—á–Ω–æ –Ω–∞ –∑–µ–º–ª–µ (0.05–º)
            groundPosition.y += 0.05f;

            transform.position = groundPosition;

            Debug.Log($"[PlayerDeathHandler] üåç –ü–µ—Ä—Å–æ–Ω–∞–∂ –æ–ø—É—â–µ–Ω –Ω–∞ –∑–µ–º–ª—é: {groundPosition} (raycast hit: {hit.collider.name})");
        }
        else
        {
            // –ó–µ–º–ª—è –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –≤ —Ä–∞–¥–∏—É—Å–µ 10–º - –ø—Ä–æ—Å—Ç–æ –æ–ø—É—Å–∫–∞–µ–º –Ω–∞ 1 –º–µ—Ç—Ä –≤–Ω–∏–∑
            Vector3 fallbackPosition = transform.position;
            fallbackPosition.y -= 1f;
            transform.position = fallbackPosition;

            Debug.LogWarning($"[PlayerDeathHandler] ‚ö†Ô∏è –ó–µ–º–ª—è –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ raycast! –û–ø—É—Å–∫–∞–µ–º –Ω–∞ 1–º –≤–Ω–∏–∑: {fallbackPosition}");
        }
    }
}
